・0.1.0 リリース用

--- a/ja/download.html
+++ b/ja/download.html
@@ -6,8 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS"/>
 <meta http-equiv="Content-Language" content="ja" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
-<meta name="keywords" content="S2JFace, SWT, JFace, リッチクライアント, Seasar2, OSS, オープンソースソフトウェア, Java, フレームワーク, " />
-<title>リッチクライアントアプリケーション・フレームワーク S2JFace - ダウンロード</title>
+<meta name="keywords" content="Uruma, S2JFace, SWT, JFace, リッチクライアント, Seasar2, OSS, オープンソースソフトウェア, Java, フレームワーク, " />
+<title>リッチクライアントアプリケーション・フレームワーク Uruma - ダウンロード</title>
 <link rel="stylesheet" type="text/css" href="../theme/main.css" media="screen,projection" />
 <link rel="stylesheet" type="text/css" href="../theme/print.css" media="print" />
 </head>
@@ -54,10 +54,10 @@
 <h2>メニュー</h2>
 <ul>
 	<li><a href="index.html">トップページ</a></li>
-	<li><a href="https://ml.seasar.org/mailman/listinfo/s2jface-dev/">メーリングリスト</a></li>
-	<li><a href="https://www.seasar.org/issues/browse/JFACE">トラッキング</a></li>
-	<li><a href="https://www.seasar.org/svn/sandbox/s2jface/">SVN リポジトリ</a></li>
-	<li><a href="http://svn.seasar.org/browse/?root=sandbox.s2jface">SVN リポジトリブラウザ</a></li>
+	<li><a href="https://ml.seasar.org/mailman/listinfo/uruma-dev/">メーリングリスト</a></li>
+	<li><a href="https://www.seasar.org/issues/browse/URUMA">トラッキング</a></li>
+	<li><a href="https://www.seasar.org/svn/sandbox/uruma/">SVN リポジトリ</a></li>
+	<li><a href="http://svn.seasar.org/browse/?root=sandbox.uruma">SVN リポジトリブラウザ</a></li>
 	<li><a href="download.html">ダウンロード</a></li>
 </ul>
 
@@ -65,7 +65,7 @@
 <h2>ドキュメント</h2>
 <ul>
 	<li><a href="setup.html">セットアップ</a></li>
-	<li><a href="functions.html">S2JFaceの提供する機能</a></li>
+	<li><a href="functions.html">Uruma の提供する機能</a></li>
 	<li><a href="viewXml.html">画面表示機能</a></li>
 	<li><a href="methodBinding.html">メソッド・バインディング</a></li>
 	<li><a href="widgetInjection.html">ウィジット・インジェクション</a></li>
@@ -84,13 +84,17 @@
 <div class="section">
 
 <h2>ダウンロード</h2>
-<h3>S2JFace 0.1.0 (S2JFace 本体)</h3>
-<p><a href="../download/2006-12-31/s2-jface-0.1.0.zip">
-<img src="../images/icon_down.gif" width="20" height="24" alt="s2-jface-0.1.0.zip" title="s2-jface-0.1.0.zip" />s2-jface-0.1.0.zip</a></p>
+<h3>Uruma 0.1.0 (Uruma 本体)</h3>
+<p><a href="../download/2007-11-02/uruma-0.1.0.zip">
+<img src="../images/icon_down.gif" width="20" height="24" alt="uruma-0.1.0.zip" title="uruma-0.1.0.zip" />uruma-0.1.0.zip</a></p>
 
-<h3>S2JFace-Exaple-Employee 0.1.0 (S2JFaceを利用して作成したサンプルアプリケーション)</h3>
-<p><a href="../download/2006-12-31/s2-jface-example-employee-0.1.0.zip">
-<img src="../images/icon_down.gif" width="20" height="24" alt="s2-jface-example-employee-0.1.0.zip" title="s2-jface-example-employee-0.1.0.zip" />s2-jface-example-employee-0.1.0.zip</a></p>
+<h3>Uruma-Exaple-Employee 0.1.0 (Urumaを利用して作成したサンプルアプリケーション)</h3>
+<p><a href="../download/2007-11-02/uruma-example-employee-0.1.0.zip">
+<img src="../images/icon_down.gif" width="20" height="24" alt="uruma-example-employee-0.1.0.zip" title="uruma-example-employee-0.1.0.zip" />uruma-example-employee-0.1.0.zip</a></p>
+
+<h3>Uruma-Exaple-Janken 0.1.0 (Urumaを利用して作成したもっとも簡単なサンプルアプリケーション)</h3>
+<p><a href="../download/2007-11-02/uruma-example-janken-0.1.0.zip">
+<img src="../images/icon_down.gif" width="20" height="24" alt="uruma-example-janken-0.1.0.zip" title="uruma-example-janken-0.1.0.zip" />uruma-example-janken-0.1.0.zip</a></p>
 
 <h3>Seasar Conference 2006 Autumn セッション資料</h3>
 <p>資料内の仕様は2006年11月現在のものです。現在の仕様とはことなる部分がありますので、ご了承ください。</p>
@@ -100,9 +104,14 @@
 </div><!-- section -->
 
 <h2>更新履歴</h2>
+<h3>2007/11/02</h3>
+<ul>
+	<li>Uruma Version 0.1.0 リリース</li>
+</ul>
+
 <h3>2006/12/31</h3>
 <ul>
-	<li>Version 0.1.0 リリース</li>
+	<li>S2JFace Version 0.1.0 リリース</li>
 </ul>
 </div><!-- section -->
 
