--- a/ja/viewXml.html
+++ b/ja/viewXml.html
@@ -6,8 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS"/>
 <meta http-equiv="Content-Language" content="ja" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
-<meta name="keywords" content="S2JFace, SWT, JFace, リッチクライアント, Seasar2, OSS, オープンソースソフトウェア, Java, フレームワーク, " />
-<title>リッチクライアントアプリケーション・フレームワーク S2JFace - GUIコンポーネント一覧</title>
+<meta name="keywords" content="Uruma, S2JFace, SWT, JFace, リッチクライアント, Seasar2, OSS, オープンソースソフトウェア, Java, フレームワーク, " />
+<title>リッチクライアントアプリケーション・フレームワーク Uruma - GUIコンポーネント一覧</title>
 <link rel="stylesheet" type="text/css" href="../theme/main.css" media="screen,projection" />
 <link rel="stylesheet" type="text/css" href="../theme/print.css" media="print" />
 </head>
@@ -54,10 +54,10 @@
 <h2>メニュー</h2>
 <ul>
 	<li><a href="index.html">トップページ</a></li>
-	<li><a href="https://ml.seasar.org/mailman/listinfo/s2jface-dev/">メーリングリスト</a></li>
-	<li><a href="https://www.seasar.org/issues/browse/JFACE">トラッキング</a></li>
-	<li><a href="https://www.seasar.org/svn/sandbox/s2jface/">SVN リポジトリ</a></li>
-	<li><a href="http://svn.seasar.org/browse/?root=sandbox.s2jface">SVN リポジトリブラウザ</a></li>
+	<li><a href="https://ml.seasar.org/mailman/listinfo/uruma-dev/">メーリングリスト</a></li>
+	<li><a href="https://www.seasar.org/issues/browse/URUMA">トラッキング</a></li>
+	<li><a href="https://www.seasar.org/svn/sandbox/uruma/">SVN リポジトリ</a></li>
+	<li><a href="http://svn.seasar.org/browse/?root=sandbox.uruma">SVN リポジトリブラウザ</a></li>
 	<li><a href="download.html">ダウンロード</a></li>
 </ul>
 
@@ -65,7 +65,7 @@
 <h2>ドキュメント</h2>
 <ul>
 	<li><a href="setup.html">セットアップ</a></li>
-	<li><a href="functions.html">S2JFaceの提供する機能</a></li>
+	<li><a href="functions.html">Uruma の提供する機能</a></li>
 	<li><a href="viewXml.html">画面表示機能</a></li>
 	<li><a href="methodBinding.html">メソッド・バインディング</a></li>
 	<li><a href="widgetInjection.html">ウィジット・インジェクション</a></li>
@@ -83,17 +83,17 @@
 
 <div class="section">
 <h2><a name="viewXml">画面表示機能</a></h2>
-<p>S2JFaceでは、画面定義情報が記述されたXMLファイルを読み込んで、画面を表示することができます。
+<p>Uruma では、画面定義情報が記述されたXMLファイルを読み込んで、画面を表示することができます。
 これにより、画面表示のための面倒なコーディングを行わなくとも、GUI画面を簡単に作成することができます。</p>
 
 <p>
-残念ながら、現在のところ、S2JFace の画面定義を作成するにはある程度 SWT に関する知識が必要になります。
+残念ながら、現在のところ、Uruma の画面定義を作成するにはある程度 SWT に関する知識が必要になります。
 (とはいっても、そんなに難しいものではありませんが・・・)
 しかし、将来的には SWT の知識がなくても、画面定義ファイルを作成できるよう、簡便化していく予定です。
 </p>
 
 <p>
-なお、S2JFace は現在開発中であるため、ここで紹介する画面定義 XML の仕様は
+なお、Uruma は現在開発中であるため、ここで紹介する画面定義 XML の仕様は
 <font color="red">将来変更される可能性があります</font>。何卒、ご了承ください。
 </p>
 
@@ -103,7 +103,7 @@
 
 <pre>
 &lt;?xml version=&quot;1.0&quot; encoding=&quot;UTF-8&quot;?&gt;
-&lt;template xmlns=&quot;http://s2jface.sandbox.seasar.org&quot;&gt;
+&lt;template xmlns=&quot;http://uruma.sandbox.seasar.org&quot;&gt;
   &lt;window id=&quot;janken&quot; title=&quot;DIでジャンケン&quot; image=&quot;container.gif&quot; background=&quot;white&quot;&gt;
     &lt;commonAttributes background=&quot;white&quot; foreground=&quot;black&quot; fontHeight=&quot;50&quot;/&gt;
     &lt;gridLayout numColumns=&quot;3&quot; marginHeight=&quot;5&quot; marginWidth=&quot;5&quot;&gt;
@@ -150,15 +150,15 @@
 </div>
 
 <p>
-S2JFace の画面定義XMLファイルは、XML Schema で定義されています。スキーマファイルは、配布アーカイブ内の
-/s2-jface-0.1.0/src/main/resources/org/seasar/jface/component/factory/s2jface.xsd にあります。
+Uruma の画面定義XMLファイルは、XML Schema で定義されています。スキーマファイルは、配布アーカイブ内の
+/uruma-0.1.0/src/main/resources/org/seasar/uruma/component/factory/uruma.xsd にあります。
 Eclipse-WTP 付属の XML エディタなど、XML Schema によるタグ補完に対応している XML エディタを使用すれば、
 補完機能により快適に XML を作成することができます。(なお、GUI による画面定義エディタは将来提供予定です)
 </p>
 
 <h3><a name="xmlStructure">画面定義 XML の構造</a></h3>
 <p>
-S2JFace の画面定義 XML は、1つの画面について1つのXMLファイルが対応し、template 要素をルートとします。
+Uruma の画面定義 XML は、1つの画面について1つのXMLファイルが対応し、template 要素をルートとします。
 </p>
 <p>
 template 要素の配下には、必ず window 要素を記述します。window 要素は、その名の通りウィンドウを表示するための要素です。
@@ -179,11 +179,11 @@ GUI 部品の配置は、各部品の x 属性、y 属性で絶対座標を指定することができますが、
 ウィンドウを可変サイズにしたアプリケーションでは、レイアウトを利用した方がウィンドウのサイズに従って
 部品が再配置されるため、見栄えが良くなるという利点があります。
 gridLayout の各属性は、SWT の GridLayout とまったく同じ属性が指定できますので、
-詳細は <a href="http://help.eclipse.org/help32/nftopic/org.eclipse.platform.doc.isv/reference/api/org/eclipse/swt/layout/GridLayout.html">GridLayout の APIリファレンス</a>をご覧ください。
+詳細は <a href="http://help.eclipse.org/help33/nftopic/org.eclipse.platform.doc.isv/reference/api/org/eclipse/swt/layout/GridLayout.html">GridLayout の APIリファレンス</a>をご覧ください。
 (このあたりが SWT の知識が必要となる所以です)
 </p>
 <p>
-現在、S2JFace では、RowLayout、FillLayout、GridLayout の 3 種類が利用できます。
+現在、Uruma では、RowLayout、FillLayout、GridLayout の 3 種類が利用できます。
 </p>
 <p>
 SWTのレイアウト指定については、<a href="http://www13.plala.or.jp/observe/swt/swt_layout.html">こちらのサイト</a>が参考になるでしょう。
@@ -216,32 +216,31 @@ id 属性は画面表示とは直接関係はありませんが、後で紹介する MethodBinding と密接な
 
 <h3><a name="howtoDisplay">画面表示の方法</a></h3>
 <p>
-S2JFace で画面定義 XML ファイルを表示するには、まず、画面定義ファイルがクラスパスに通っている必要があります。
+Uruma で画面定義 XML ファイルを表示するには、まず、画面定義ファイルがクラスパスに通っている必要があります。
 また、画面で表示する画像ファイルなどのリソースも同様です。
 </p>
 <p>
 画面を表示するには、2つの方法があります。1つめは、起動引数として指定する方法です。
 </p>
 <p>
-以下のように、org.seasar.jface.S2JFace をメインクラスとしてJavaを実行し、第1引数に画面定義ファイルのパスを
-渡すだけで画面が表示されます。
+以下のように、org.seasar.uruma.core.StandAloneUrumaStarter をメインクラスとしてJavaを実行し、第1引数に画面定義ファイルのパスを渡すだけで画面が表示されます。
 </p>
 <pre>
-java -cp (クラスパス) -Djava.library.path=c:/s2-jface-0.1.0/lib org.seasar.jface.S2JFace (続く)
-org/seasar/jface/example/janken/DIdeJanken.xml
+java -cp (クラスパス) org.seasar.uruma.core.StandAloneUrumaStarter (続く)
+org/seasar/uruma/example/janken/DIdeJanken.xml
 </pre>
 <p>
 この場合、画面定義ファイルは DIdeJanken.xml という名前で、
-クラスパス中の org/seasar/jface/example/janken/ というディレクトリに存在します。
+クラスパス中の org/seasar/uruma/example/janken/ というディレクトリに存在します。
 </p>
 
 <p>
 もう一つの方法は、プログラム内部から利用する方法です。
-以下のように、S2JFaceクラスの openWindow メソッドの引数として画面定義XMLのパスを渡します。
+以下のように、StandAloneUrumaStarter クラスの openWindow メソッドの引数として画面定義XMLのパスを渡します。
 </p>
 <pre>
-  S2JFace s2JFace = new S2JFace();
-  s2JFace.openWindow("org/seasar/jface/example/janken/DIdeJanken.xml");
+  StandAloneUrumaStarter uruma = StandAloneUrumaStarter.getInstance();
+  uruma.openWindow("org/seasar/uruma/example/janken/DIdeJanken.xml");
 </pre>
 
 </div><!-- section -->
