--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <tr align="left" valign="top"><td width="14"><img height="14" width="14" src="en/images/spacer.gif" alt=""></td><td width="740" class="main">
 <!-- don't edit end -->
 <!-- document start -->
-<h1>S2JFace home page</h1>
+<h1>Uruma(S2JFace) web site.</h1>
 <p>Please click the below URL.</p>
 <ul>
 <li><a href="ja/index.html">Japanese</a></li>
@@ -41,7 +41,7 @@
 <td width="766"><img height="30" width="592" src="en/images/spacer.gif" alt=""></td>
 </tr><tr>
 <td width="14"><img height="14" width="14" src="en/images/spacer.gif" alt=""></td>
-<td width="766" class="copyright">&copy; Copyright The Seasar Foundation and the others 2004, all rights reserved.</td>
+<td width="766" class="copyright">&copy; Copyright The Seasar Foundation and the others 2004-2007, all rights reserved.</td>
 </tr></table>
 <td class="backright" align="left" valign="top">&nbsp;</td></tr><tr>
 <td class="backunder" align="left"  valign="top" width="780" height="16">&nbsp;</td>
