--- a/ja/components.html
+++ b/ja/components.html
@@ -6,8 +6,8 @@
 <meta http-equiv="Content-Type" content="text/html; charset=Shift_JIS"/>
 <meta http-equiv="Content-Language" content="ja" />
 <meta http-equiv="Content-Style-Type" content="text/css" />
-<meta name="keywords" content="S2JFace, SWT, JFace, リッチクライアント, Seasar2, OSS, オープンソースソフトウェア, Java, フレームワーク, " />
-<title>リッチクライアントアプリケーション・フレームワーク S2JFace - S2JFaceの提供する機能</title>
+<meta name="keywords" content="Uruma, S2JFace, SWT, JFace, リッチクライアント, Seasar2, OSS, オープンソースソフトウェア, Java, フレームワーク, " />
+<title>リッチクライアントアプリケーション・フレームワーク Uruma - Uruma の提供する機能</title>
 <link rel="stylesheet" type="text/css" href="../theme/main.css" media="screen,projection" />
 <link rel="stylesheet" type="text/css" href="../theme/print.css" media="print" />
 </head>
@@ -54,10 +54,10 @@
 <h2>メニュー</h2>
 <ul>
 	<li><a href="index.html">トップページ</a></li>
-	<li><a href="https://ml.seasar.org/mailman/listinfo/s2jface-dev/">メーリングリスト</a></li>
+	<li><a href="https://ml.seasar.org/mailman/listinfo/uruma-dev/">メーリングリスト</a></li>
 	<li><a href="https://www.seasar.org/issues/browse/JFACE">トラッキング</a></li>
-	<li><a href="https://www.seasar.org/svn/sandbox/s2jface/">SVN リポジトリ</a></li>
-	<li><a href="http://svn.seasar.org/browse/?root=sandbox.s2jface">SVN リポジトリブラウザ</a></li>
+	<li><a href="https://www.seasar.org/svn/sandbox/uruma/">SVN リポジトリ</a></li>
+	<li><a href="http://svn.seasar.org/browse/?root=sandbox.uruma">SVN リポジトリブラウザ</a></li>
 	<li><a href="download.html">ダウンロード</a></li>
 </ul>
 
@@ -65,7 +65,7 @@
 <h2>ドキュメント</h2>
 <ul>
 	<li><a href="setup.html">セットアップ</a></li>
-	<li><a href="functions.html">S2JFaceの提供する機能</a></li>
+	<li><a href="functions.html">Uruma の提供する機能</a></li>
 	<li><a href="viewXml.html">画面表示機能</a></li>
 	<li><a href="methodBinding.html">メソッド・バインディング</a></li>
 	<li><a href="widgetInjection.html">ウィジット・インジェクション</a></li>
@@ -82,12 +82,12 @@
 <div id="article">
 
 <div class="section">
-<h2>S2JFace GUIコンポーネント一覧</h2>
+<h2>Uruma GUIコンポーネント一覧</h2>
 <p>
-ここでは、S2JFace で表示できる GUI コンポーネントのサンプルを画面定義 XML とともに紹介します。
+ここでは、Uruma で表示できる GUI コンポーネントのサンプルを画面定義 XML とともに紹介します。
 </p>
 <p>
-S2JFace の GUI コンポーネントは、SWT のウィジットに合わせて作成されているので、SWT のウィジットが持っている属性は、
+Uruma の GUI コンポーネントは、SWT のウィジットに合わせて作成されているので、SWT のウィジットが持っている属性は、
 たいていそのまま指定することができます。
 </p>
 
@@ -124,20 +124,17 @@ S2JFace の GUI コンポーネントは、SWT のウィジットに合わせて作成されているので、S
 
 <h3>テスト画面の表示方法</h3>
 <p>
-これらのサンプル画面はテストコードとして S2JFace に付属しているものです。
+これらのサンプル画面はテストコードとして Uruma に付属しているものです。
 お手元で実行してみたい方は、以下の手順に従ってください。
 </p>
 <p>
 また、テスト用の画面定義XML は、配布アーカイブ内の
- /s2-jface-0.1.0/src/test/resources/org/seasar/jface/renderer/impl
+ /uruma-0.1.0/src/test/resources/org/seasar/uruma/renderer/impl
 ディレクトリにあります。
 </p>
 <ol>
-	<li>Subversionリポジトリ(https://www.seasar.org/svn/sandbox/s2jface/)から s2jface プロジェクトを取得し、Eclipse へインポートする。</li>
-	<li>Eclipseのメニューから[ウィンドウ]-[設定]-[Java]-[インストール済みのJRE]を選択する。</li>
-	<li>現在使用しているJREを選択し、[編集]ボタンを押す。</li>
-	<li>[デフォルトのVM引数]に -Djava.library.path=C:\workspace\s2jface\lib を指定する。(ディレクトリは環境に応じて変更してください)</li>
-	<li>パッケージ・エクスプローラーから s2jface プロジェクトを選択して右クリックメニューを開き、[実行]-[JUnitテスト]を選択する。</li>
+	<li>Subversionリポジトリ(https://www.seasar.org/svn/sandbox/uruma/)から uruma プロジェクトを取得し、Eclipse へインポートする。</li>
+	<li>パッケージ・エクスプローラーから uruma プロジェクトを選択して右クリックメニューを開き、[実行]-[JUnitテスト]を選択する。</li>
 </ol>
 
 <h2><a name="label">Label</a></h2>
