・version 0.3.0リリース

--- a/ja/download.html
+++ b/ja/download.html
@@ -84,21 +84,25 @@
 <div class="section">
 
 <h2>ダウンロード</h2>
-<h3>Uruma 0.2.0 (Uruma 本体)</h3>
-<p><a href="../download/2007-11-13/uruma-0.2.0.zip">
-<img src="../images/icon_down.gif" width="20" height="24" alt="uruma-0.2.0.zip" title="uruma-0.2.0.zip" />uruma-0.2.0.zip</a></p>
+<h3>Uruma 0.3.0 (Uruma 本体)</h3>
+<p><a href="../download/2008-03-03/uruma-0.3.0.zip">
+<img src="../images/icon_down.gif" width="20" height="24" alt="uruma-0.3.0.zip" title="uruma-0.3.0.zip" />uruma-0.3.0.zip</a></p>
 
 <h3>Uruma-Exaple-FileManager (Urumaを利用して作成したRCPサンプルアプリケーション)</h3>
-<p><a href="../download/2007-11-13/org.seasar.uruma.example.filemanager_1.0.0.zip">
-<img src="../images/icon_down.gif" width="20" height="24" alt="org.seasar.uruma.example.filemanager_1.0.0.zip" title="org.seasar.uruma.example.filemanager_1.0.0.zip" />org.seasar.uruma.example.filemanager_1.0.0.zip</a></p>
+<p><a href="../download/2008-03-03/org.seasar.uruma.example.filemanager_0.3.0.zip">
+<img src="../images/icon_down.gif" width="20" height="24" alt="org.seasar.uruma.example.filemanager_0.3.0.zip" title="org.seasar.uruma.example.filemanager_0.3.0.zip" />org.seasar.uruma.example.filemanager_0.3.0.zip</a></p>
 
-<h3>Uruma-Exaple-Employee 0.2.0 (Urumaを利用して作成したサンプルアプリケーション)</h3>
-<p><a href="../download/2007-11-13/uruma-example-employee-0.2.0.zip">
-<img src="../images/icon_down.gif" width="20" height="24" alt="uruma-example-employee-0.2.0.zip" title="uruma-example-employee-0.2.0.zip" />uruma-example-employee-0.2.0.zip</a></p>
+<h3>Uruma-Exaple-Employee 0.3.0 (Urumaを利用して作成したサンプルアプリケーション)</h3>
+<p><a href="../download/2008-03-03/uruma-example-employee-0.3.0.zip">
+<img src="../images/icon_down.gif" width="20" height="24" alt="uruma-example-employee-0.3.0.zip" title="uruma-example-employee-0.3.0.zip" />uruma-example-employee-0.3.0.zip</a></p>
 
-<h3>Uruma-Exaple-Janken 0.2.0 (Urumaを利用して作成したもっとも簡単なサンプルアプリケーション)</h3>
-<p><a href="../download/2007-11-13/uruma-example-janken-0.2.0.zip">
-<img src="../images/icon_down.gif" width="20" height="24" alt="uruma-example-janken-0.2.0.zip" title="uruma-example-janken-0.2.0.zip" />uruma-example-janken-0.2.0.zip</a></p>
+<h3>Uruma-Exaple-Janken 0.3.0 (Urumaを利用して作成したもっとも簡単なサンプルアプリケーション)</h3>
+<p><a href="../download/2008-03-03/uruma-example-janken-0.3.0.zip">
+<img src="../images/icon_down.gif" width="20" height="24" alt="uruma-example-janken-0.3.0.zip" title="uruma-example-janken-0.3.0.zip" />uruma-example-janken-0.3.0.zip</a></p>
+
+<h3>Uruma-Exaple-Blank 0.3.0 (Urumaアプリケーションを開発するためのブランクプロジェクト)</h3>
+<p><a href="../download/2008-03-03/org.seasar.uruma.example.blank_0.3.0.zip">
+<img src="../images/icon_down.gif" width="20" height="24" alt="org.seasar.uruma.example.blank_0.3.0.zip" title="org.seasar.uruma.example.blank_0.3.0.zip" />org.seasar.uruma.example.blank_0.3.0.zip</a></p>
 
 <h3>Seasar Conference 2007 Autumn セッション資料</h3>
 <p><a href="http://event.seasarfoundation.org/sc2007autumn/viewAttachment.do?_pageName_=Session&_fileName_=sc2007a-c2-uruma.pdf">
@@ -112,6 +116,57 @@
 </div><!-- section -->
 
 <h2>更新履歴</h2>
+<h3>2008/3/3</h3>
+<ul>
+	<li><b>Uruma Version 0.3.0 リリース</b></li><br />
+	<b>Bug</b>
+	<ul>
+		<li>URUMA-95 テーブルを選択するたびにカラムサイズの再計算が実行される
+	</ul>
+	
+	<b>Improvement</b>
+	<ul>
+		<li>URUMA-100 使用するライブラリをEclipse3.3.1に更新する
+		<li>URUMA-104 RCP環境でS2コンポーネントの自動登録を行えるようにする
+		<li>URUMA-105 workbench.xml が存在しない場合も起動できるようにする
+		<li>URUMA-117 Urumaアプリケーションが持つlog4j.propertiesを優先して設定するようにする
+		<li>URUMA-118 treeコンポーネントでデフォルトで展開するノードの深さを指定できるようにする
+		<li>URUMA-120 StructuredViewerからのSELECTIONイベントで選択されたオブジェクトを引数に渡せるようにする
+		<li>URUMA-121 RCP環境でのメニュー表示に拡張ポイントを利用するようにする
+		<li>URUMA-88 table コンポーネントの標準ソートで数値のソートも行えるようにする
+		<li>URUMA-97 デフォルトのテーブル用コンパレータの動作をカスタマイズできるようにする
+		<li>URUMA-78 app.diconやs2JFaceImages.propertiesがなくても動作するようにする
+	</ul>
+	
+	<b>New Feature</b>
+	<ul>
+		<li>URUMA-101 Uruma 本体をプラグイン化する
+		<li>URUMA-102 Uruma本体をEclipseプラグイン化する
+		<li>URUMA-107 Win32APIを利用できるようにする
+		<li>URUMA-108 ローカルコンピュータの NetBIOS 名を取得できるようにする
+		<li>URUMA-109 現在利用可能なディスクドライブを取得できるようにする
+		<li>URUMA-110 ボリューム情報を取得できるようにする
+		<li>URUMA-112 ウィンドウのクローズを許可するかどうかをユーザアプリケーションで制御できるようにする
+		<li>URUMA-113 ドライブの種類を調べられるようにする
+		<li>URUMA-114 Windowsのファイル情報を取得できるようにする
+		<li>URUMA-115 任意のファイルからアイコンを取り出せるようにする
+		<li>URUMA-116 文字列に含まれる環境変数を展開できるようにする
+		<li>URUMA-119 Viewer の IDoubleClickListener をアクションコンポーネントで受け取れるようにする
+		<li>URUMA-122 Urumaアプリケーション初期化中に発生した例外をダイアログに表示する
+		<li>URUMA-83 ユーザアプリケーションからリソースバンドルを扱うためのユーティリティクラスを提供する
+		<li>URUMA-84 ユーザアプリケーションからダイアログを表示するためのユーティリティクラスを提供する
+		<li>URUMA-87 ブランクプロジェクトを提供する
+		<li>URUMA-96 POJO をテーブルのラベルプロバイダとして利用できるようにする
+	</ul>
+	
+	<b>Task</b>
+	<ul>
+		<li>URUMA-135 Uruma付属のS2Containerを2.4.23へ更新する
+	</ul>
+
+	</ul>
+</ul>
+
 <h3>2007/11/12</h3>
 <ul>
 	<li><b>Uruma Version 0.2.0 リリース</b></li>
@@ -144,7 +199,7 @@
 </div><!-- contents_center -->
 
 <div id="footer">
-<address>&copy; Copyright The Seasar Foundation and the others 2004-2007, all rights reserved.</address>
+<address>&copy; Copyright The Seasar Foundation and the others 2004-2008, all rights reserved.</address>
 <div class="line"><span class="hide">spacer</span></div>
 </div><!-- footer -->
 
