--- a/ja/index.html
+++ b/ja/index.html
@@ -80,19 +80,23 @@
 
 <div id="article">
 
+<div align="center">
+  <img src="../images/splash.png" width="400" height="248" />
+</div>
+
 <div class="section">
 <h2>ŠT—v</h2>
 <p>
 Uruma ‚ÍAXML’è‹`‚É‚æ‚éGUI‚Ì•\Ž¦(SWT/JFace‚ðŽg—p)‚ÆAGUI‚ÆSeasar2ã‚ÌƒRƒ“ƒ|[ƒlƒ“ƒg‚Æ‚Ì˜AŒg‚ðŽÀŒ»‚·‚éƒŠƒbƒ`ƒNƒ‰ƒCƒAƒ“ƒgƒAƒvƒŠƒP[ƒVƒ‡ƒ“ƒtƒŒ[ƒ€ƒ[ƒN‚Å‚·BUruma ‚ð—˜—p‚·‚é‚±‚Æ‚ÅAƒŠƒbƒ`ƒNƒ‰ƒCƒAƒ“ƒgƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ªŒø—¦“I‚ÉŠJ”­‚Å‚«‚é‚æ‚¤‚É‚È‚è‚Ü‚·B
 </p>
 <p>
-‚Ü‚¸‚ÍAUruma ‚ð—˜—p‚µ‚½<a href="../download/2007-11-13/uruma-example-employee-0.2.0.zip">ƒTƒ“ƒvƒ‹ƒAƒvƒŠƒP[ƒVƒ‡ƒ“</a>‚ðƒ_ƒEƒ“ƒ[ƒh‚µ‚ÄAŽÀs‚µ‚Ä‚Ý‚Ä‚­‚¾‚³‚¢BŽÀs•û–@‚ÍŠÈ’PIƒ_ƒEƒ“ƒ[ƒh‚µ‚½ƒtƒ@ƒCƒ‹‚ð“WŠJ‚µArun.bat ‚ðƒ_ƒuƒ‹ƒNƒŠƒbƒN‚·‚é‚¾‚¯‚Å‚·B
+‚Ü‚¸‚ÍAUruma ‚ð—˜—p‚µ‚½<a href="../download/2008-03-03/uruma-example-employee-0.3.0.zip">ƒTƒ“ƒvƒ‹ƒAƒvƒŠƒP[ƒVƒ‡ƒ“</a>‚ðƒ_ƒEƒ“ƒ[ƒh‚µ‚ÄAŽÀs‚µ‚Ä‚Ý‚Ä‚­‚¾‚³‚¢BŽÀs•û–@‚ÍŠÈ’PIƒ_ƒEƒ“ƒ[ƒh‚µ‚½ƒtƒ@ƒCƒ‹‚ð“WŠJ‚µArun.bat ‚ðƒ_ƒuƒ‹ƒNƒŠƒbƒN‚·‚é‚¾‚¯‚Å‚·B
 </p>
 
 <p>ˆÈ‰º‚Ì‚æ‚¤‚È‰æ–Ê‚ª•\Ž¦‚³‚ê‚½‚Å‚µ‚å‚¤‚©H</p>
 
 <div align="center">
-<img src="../images/employeeMain.png" width="604" width="400" alt="]‹ÆˆõŠÇ—ƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ÌƒƒCƒ“‰æ–Ê">
+  <img src="../images/employeeMain.png" width="604" height="400" alt="]‹ÆˆõŠÇ—ƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ÌƒƒCƒ“‰æ–Ê" />
 </div>
 
 <p>
@@ -110,7 +114,19 @@ Uruma ‚Å‚ÍA‚±‚Ì‚æ‚¤‚ÈGUIƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ðŠÈ’P‚Éì¬‚·‚é‚±‚Æ‚ª‚Å‚«‚Ü‚·BUruma ‚
 ‚Ü‚½AUruma ‚Å•\Œ»‚Å‚«‚é GUI ƒRƒ“ƒ|[ƒlƒ“ƒg‚ÍA<a href="components.html">‚±‚¿‚ç</a> ‚©‚çŒ©‚é‚±‚Æ‚ª‚Å‚«‚Ü‚·B
 Œ»’iŠK‚ÅA”‘½‚­‚ÌƒRƒ“ƒ|[ƒlƒ“ƒg•\Ž¦‚É‘Î‰ž‚µ‚Ä‚¢‚Ü‚·B
 </p>
-</div><!-- section -->
+
+<p>
+‚³‚ç‚ÉAUruma 0.2.0 ‚©‚ç‚ÍARCP ƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ÌŠJ”­‚ðƒTƒ|[ƒg‚·‚é‚æ‚¤‚É‚È‚è‚Ü‚µ‚½B‚±‚¿‚ç‚Ì<a herf="../download/2008-03-03/org.seasar.uruma.example.filemanager_0.3.0.zip">ƒTƒ“ƒvƒ‹ƒAƒvƒŠƒP[ƒVƒ‡ƒ“</a>‚Å‚ÍA‚Â‚¬‚Ì‚æ‚¤‚ÈŠÈ’P‚Èƒtƒ@ƒCƒ‹ŠÇ—ƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ð‚½‚Á‚½<strong>370s</strong>‚ÅŽÀŒ»‚µ‚Ä‚¢‚Ü‚·B
+</p>
+
+<div align="center">
+  <img src="../images/fileManager.png" width="826" height="482" alt="ƒtƒ@ƒCƒ‹ŠÇ—ƒAƒvƒŠƒP[ƒVƒ‡ƒ“" />
+</div>
+
+</div>
+
+
+<!-- section -->
 
 <div class="section">
 <h2>ƒ[ƒŠƒ“ƒOƒŠƒXƒg</h2>
@@ -155,7 +171,7 @@ Uruma ‚Å‚ÍA‚±‚Ì‚æ‚¤‚ÈGUIƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ðŠÈ’P‚Éì¬‚·‚é‚±‚Æ‚ª‚Å‚«‚Ü‚·BUruma ‚
 </div><!-- contents_center -->
 
 <div id="footer">
-<address>&copy; Copyright The Seasar Foundation and the others 2004-2007, all rights reserved.</address>
+<address>&copy; Copyright The Seasar Foundation and the others 2004-2008, all rights reserved.</address>
 <div class="line"><span class="hide">spacer</span></div>
 </div><!-- footer -->
 
