・APIドキュメント更新

--- a/ja/index.html
+++ b/ja/index.html
@@ -116,7 +116,7 @@ Uruma ‚Å‚ÍA‚±‚Ì‚æ‚¤‚ÈGUIƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ðŠÈ’P‚Éì¬‚·‚é‚±‚Æ‚ª‚Å‚«‚Ü‚·BUruma ‚
 </p>
 
 <p>
-‚³‚ç‚ÉAUruma 0.2.0 ‚©‚ç‚ÍARCP ƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ÌŠJ”­‚ðƒTƒ|[ƒg‚·‚é‚æ‚¤‚É‚È‚è‚Ü‚µ‚½B‚±‚¿‚ç‚Ì<a herf="../download/2008-03-03/org.seasar.uruma.example.filemanager_0.3.0.zip">ƒTƒ“ƒvƒ‹ƒAƒvƒŠƒP[ƒVƒ‡ƒ“</a>‚Å‚ÍA‚Â‚¬‚Ì‚æ‚¤‚ÈŠÈ’P‚Èƒtƒ@ƒCƒ‹ŠÇ—ƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ð‚½‚Á‚½<strong>370s</strong>‚ÅŽÀŒ»‚µ‚Ä‚¢‚Ü‚·B
+‚³‚ç‚ÉAUruma 0.2.0 ‚©‚ç‚ÍARCP ƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ÌŠJ”­‚ðƒTƒ|[ƒg‚·‚é‚æ‚¤‚É‚È‚è‚Ü‚µ‚½B‚±‚¿‚ç‚Ì<a href="../download/2008-03-03/org.seasar.uruma.example.filemanager_0.3.0.zip">ƒTƒ“ƒvƒ‹ƒAƒvƒŠƒP[ƒVƒ‡ƒ“</a>‚Å‚ÍA‚Â‚¬‚Ì‚æ‚¤‚ÈŠÈ’P‚Èƒtƒ@ƒCƒ‹ŠÇ—ƒAƒvƒŠƒP[ƒVƒ‡ƒ“‚ð‚½‚Á‚½<strong>370s</strong>‚ÅŽÀŒ»‚µ‚Ä‚¢‚Ü‚·B
 </p>
 
 <div align="center">
